--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,33 +12,33 @@
 #        password: ds123
 #---
 # SOLO PARA LOCAL
-server:
-  port: 8006
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
-spring:
+#server:
+#  port: 8006
+#management:
+#  endpoints:
+#    web:
+#      exposure:
+#        include: "*"
+#spring:
+##  config:
+##      import: 'optional:configserver:'
+#  datasource:
+#    one:
+#      driver-class-name: org.MongoDriver.Driver
+#      url: jdbc:mongo://localhost:27017/db_products
+#  data:
+#    mongodb:
+#      uri: mongodb://localhost:27017/
+#      database: db_products
+#
+#logging:
 #  config:
-#      import: 'optional:configserver:'
-  datasource:
-    one:
-      driver-class-name: org.MongoDriver.Driver
-      url: jdbc:mongo://localhost:27017/db_products
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/
-      database: db_products
-
-logging:
-  config:
-    classpath: logback-test.xml
+#    classpath: logback-test.xml
 
 #---
 # SOLO PARA PRUEBA
-#spring:
-#  application:
-#    name: product-service
-#  config:
-#    import: configserver:http://localhost:8081
+spring:
+  application:
+    name: movement-service
+  config:
+    import: configserver:http://localhost:8081
