--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,11 @@
 			<artifactId>spring-cloud-starter-config</artifactId>
 			<version>3.1.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>3.1.3</version>
+		</dependency>
 
 
 
